--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.0",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.0",
     "next": "14.2.13",
