--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "next": "14.2.13",
     "react": "^18",
