--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
+    "lightgallery": "^2.7.2",
     "lottie-react": "^2.4.0",
     "next": "14.2.13",
     "react": "^18",
