--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
