--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lightgallery": "^2.7.2",
     "lottie-react": "^2.4.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.18",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
