--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-quill": "^2.0.0",
+    "react-share": "^5.1.0",
+    "react-to-print": "^3.0.2",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
